Move up empty search results placeholder and fix other alignment issues

--- a/client/reader/following-edit/style.scss
+++ b/client/reader/following-edit/style.scss
@@ -107,16 +107,17 @@
 
 // Add to Following
 .following-edit__subscribe-form {
+	box-shadow: 0 1px 2px lighten( $gray, 30% );
 	position: absolute;
-		top: 0;
+		top: 60px;
 		right: 0;
 		left: 0;
 	opacity: 0;
 	pointer-events: none;
 	transition: all 0.15s ease-in-out;
 
-	@include breakpoint( "<480px" ) {
-		top: 62px;
+	@include breakpoint( ">660px" ) {
+		top: 0;
 	}
 
 	.search {
@@ -192,20 +193,15 @@
 // Search Results Placeholder
 .following-edit__subscribe-form-blank {
 	position: absolute;
-		top: 68px;
+		top: 51px;
 	width: 100%;
 	height: 75px;
 	box-sizing: border-box;
-	padding: 26px 32px 0 32px;
+	padding: 26px 32px 0;
 	text-align: center;
-	color: darken( $gray, 10 );
-	background: lighten( $gray, 30 );
-	box-shadow: 0 0 0 1px transparentize( lighten( $gray, 20 ), .5 );
-
-	@include breakpoint( "<480px" ) {
-		padding: 16px 42px 0 42px;
-		top: 59px;
-	}
+	color: darken( $gray, 10% );
+	background: lighten( $gray, 30% );
+	box-shadow: 0 0 0 1px transparentize( lighten( $gray, 20% ), .5 );
 }
 
 
@@ -235,10 +231,6 @@
 		.reader-list-item__title,
 		.reader-list-item__description {
 			margin-left: 92px;
-
-			@include breakpoint( ">660px" ) {
-				margin-left: 80px;
-			}
 		}
 
 		.following-edit__list-title {
@@ -256,6 +248,7 @@
 		padding-left: 12px;
 		margin-left: 80px;
 		margin-right: 100px;
+
 		@include breakpoint( ">660px" ) {
 			padding-left: 0;
 		}
@@ -263,7 +256,6 @@
 
 	.reader-list-item__icon {
 		top: 14px;
-		left: 40px;
 	}
 }
 
@@ -284,6 +276,7 @@
 	&.is-compact {
 		padding-top: 10px;
 		padding-bottom: 10px;
+
 		@include breakpoint( ">660px" ) {
 			padding-left: 105px;
 		}
